--- a/index_en.html
+++ b/index_en.html
@@ -34,7 +34,7 @@
         <nav>
             <ul>
                 <li> <a href="/index_pl.html">PL</a></li>
-                <li> <a href="#">Download in PDF</a></li>
+                <li> <a href="/asset/CV_Monika-Jaroszewicz_EN.pdf" target="_blank">Download in PDF</a></li>
             </ul>
         </nav>
 
