--- a/index_pl.html
+++ b/index_pl.html
@@ -35,7 +35,7 @@
         <nav>
             <ul>
                 <li> <a href="/index_en.html">EN</a></li>
-                <li> <a href="#" download>Pobierz w PDF</a></li>
+                <li> <a href="/asset/CV_Monika-Jaroszewicz_PL.pdf" target="_blank">Pobierz w PDF</a></li>
             </ul>
         </nav>
 
