--- a/index_pl.html
+++ b/index_pl.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Experienced Key Account Manager with a passion for coding. Aspiring Frontend Developer familiar with HTML, CSS, JS & React. Seeking growth in programming.">
     <title>CV_Monika-Jaroszewicz</title>
-    <link rel="stylesheet" media="screen,print" href="/style.css">
+    <link rel="stylesheet" media="screen,print" href="style.css">
     <script src="https://kit.fontawesome.com/159348a646.js" crossorigin="anonymous"></script>
     </link>
 
