--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <nav>
             <ul>
-                <li> <a href="/index_en.html">EN</a></li>
+                <li> <a href="index_en.html">EN</a></li>
                 <li> <a href="/asset/CV_Monika-Jaroszewicz_PL.pdf" target="_blank">Pobierz w PDF</a></li>
             </ul>
         </nav>
