--- a/index_en.html
+++ b/index_en.html
@@ -33,7 +33,7 @@
         </div>
         <nav>
             <ul>
-                <li> <a href="/index.html">PL</a></li>
+                <li> <a href="index.html">PL</a></li>
                 <li> <a href="/asset/CV_Monika-Jaroszewicz_EN.pdf" target="_blank">Download in PDF</a></li>
             </ul>
         </nav>
